# MOBIDICpy

./: .gitignore  .linkspector.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: build.yml  cffconvert.yml  coverage.yml  documentation-deploy-development.yml  documentation-deploy-release.yml  documentation-test.yml  fair-software.yml  lint.yml  markdown-link-check.yml  publish.yml
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/assets/: custom.css
develop/cli/: index.html
develop/development/: index.html
develop/examples/: index.html
develop/introduction/: index.html
develop/reference/: index.html
develop/reference/calibration/: index.html
develop/reference/config/: index.html
develop/reference/crop_coefficients/: index.html
develop/reference/energy_balance/: index.html
develop/reference/gis_io/: index.html
develop/reference/grid_ops/: index.html
develop/reference/groundwater/: index.html
develop/reference/hillslope_mapping/: index.html
develop/reference/io/: index.html
develop/reference/meteo/: index.html
develop/reference/network/: index.html
develop/reference/preprocessing/: index.html
develop/reference/report/: index.html
develop/reference/routing/: index.html
develop/reference/simulation/: index.html
develop/reference/soil_water_balance/: index.html
develop/reference/state/: index.html
develop/search/: search_index.json
docs/: cli.md  development.md  examples.md  index.md  introduction.md  reference.md
docs/reference/: calibration.md  config.md  crop_coefficients.md  energy_balance.md  gis_io.md  grid_ops.md  groundwater.md  hillslope_mapping.md  index.md  io.md  meteo.md  network.md  preprocessing.md  report.md  routing.md  simulation.md  soil_water_balance.md  state.md
examples/: README.md  check_01_flow_direction.py  check_02_network_ret.py  check_03_versanti.py  check_04_ch.py  check_05_gisdata.py  demo_config_parser.py  demo_flowdir_conversion.py  demo_gis_reader.py  demo_hill_reach_map.py  demo_meteo_mat_to_nc.py  demo_process_network.py  run_example_Arno.py  run_example_Arno_plots.py  run_example_Arno_raster_forcing.py  run_example_Arno_reservoirs.py  run_example_Arno_reservoirs_plots.py  run_example_Arno_restart.py  run_preprocessing.py  sample_calibration_config.yaml  sample_config.yaml
examples/00-numerical_validation/: check_01_flow_direction.py  check_02_network_ret.py  check_03_versanti.py  check_04_ch.py  check_05_gisdata.py
examples/01-event-Arno-basin/: 01a_run_example_Arno.py  01b_run_example_Arno_plots.py  02_run_example_Arno_raster_forcing.py  03_run_example_Arno_restart.py  04a_run_example_Arno_reservoirs.py  04b_run_example_Arno_reservoirs_plots.py  05_calibrate_Arno_glm.py  06_calibrate_Arno_ies.py  07_sensitivity_Arno.py  07_sensitivity_Arno_Morris.py  Arno.calibration.yaml  Arno.reservoirs.yaml  Arno.yaml
examples/02-daily-balance-Arno-basin/: 01a_run_example_Arno_daily.py  01b_run_example_Arno_daily_plots.py  Arno.daily.yaml
examples/Arno/: Arno.reservoirs.yaml  Arno.yaml
examples/Arno/meteodata/: meteodata.mat
examples/Arno/raster/: cap.tif  flowdir.tif  grav.tif
examples/Arno/reservoirs/: initial_conditions.csv  reservoirs.qix  reservoirs.shp
examples/Arno/shp/: Arno_river_network.shx
examples/calibration/Arno/: Arno.yaml  calibration.yaml
examples/demos/: demo_config_parser.py  demo_hill_reach_map.py  demo_meteo_mat_to_nc.py  demo_preprocessing_workflow.py  demo_process_network.py
mobidic/: __init__.py
mobidic/calibration/: __init__.py  config.py  forward_model.py  instruction.py  metrics.py  observation.py  parameter_mapping.py  pest_setup.py  results.py  template.py
mobidic/cli/: __init__.py  _common.py  main.py
mobidic/config/: __init__.py  parser.py  schema.py
mobidic/core/: __init__.py  constants.py  crop_coefficients.py  energy_balance.py  groundwater.py  interpolation.py  pet.py  reservoir.py  routing.py  simulation.py  soil_water_balance.py
mobidic/data/: kc_clc_mapping.csv
mobidic/io/: __init__.py  meteo.py  report.py  state.py
mobidic/preprocessing/: __init__.py  gis_reader.py  grid_operations.py  hillslope_reach_mapping.py  hyetograph.py  io.py  meteo_preprocessing.py  meteo_raster.py  preprocessor.py  reservoirs.py  river_network.py
mobidic/utils/: __init__.py  crs.py  interpolation.py  logging.py  pet.py
tests/: __init__.py  test_package.py
tests/test_calibration/: test_config.py  test_forward_model.py  test_instruction.py  test_metrics.py  test_observation.py  test_parameter_mapping.py  test_pest_setup_swp.py  test_results_swp.py  test_template.py
tests/test_cli/: conftest.py  test_commands.py  test_main.py
tests/test_config/: test_parser.py  test_schema.py
tests/test_core/: __init__.py  test_crop_coefficients.py  test_energy_balance.py  test_groundwater.py  test_interpolation.py  test_pet.py  test_reservoir.py  test_routing.py  test_simulation.py  test_simulation_raster.py  test_soil_water_balance.py
tests/test_io/: __init__.py  test_meteo.py  test_report.py  test_state.py
tests/test_preprocessing/: test_gis_reader.py  test_grid_operations.py  test_hillslope_reach_mapping.py  test_hyetograph.py  test_io.py  test_meteo_preprocessing.py  test_meteo_raster.py  test_preprocessor.py  test_reservoirs.py  test_river_network.py
tests/test_utils/: test_crs.py  test_logging.py
v0.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.1/development/: index.html
v0.1/examples/: index.html
v0.1/introduction/: index.html
v0.1/reference/: index.html
v0.1/search/: search_index.json
v0.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.2/development/: index.html
v0.2/examples/: index.html
v0.2/introduction/: index.html
v0.2/reference/: index.html
v0.2/search/: search_index.json
v0.3/: 404.html  index.html  sitemap.xml
v0.3/assets/: custom.css
v0.3/cli/: index.html
v0.3/development/: index.html
v0.3/examples/: index.html
v0.3/introduction/: index.html
v0.3/reference/: index.html
(+117 files in other folders)
