[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Matteo Masi", email = "matteo.masi@unifi.it" },
    { name = "Fabio Castelli", email = "fabio.castelli@unifi.it" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=2.0",
    "scipy>=1.16",
    "matplotlib>=3.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rasterio>=1.4.0",
    "geopandas>=1.1.0",
    "loguru>=0.7.0",
    "pyarrow>=21.0.0",
    "xarray>=2023.1.0",
    "netcdf4>=1.6.0",
    "numba>=0.63.0",
]
description = "MOBIDICpy - Distributed and continuous hydrological balance model"
keywords = ["Hydrology", "Numerical modelling", "Distributed hydrologic modelling"]
license = "Apache-2.0"
name = "mobidicpy"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
version = "0.1.1"


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "genbadge[coverage]>=1.1.3",
    "ruff>=0.1.1",
    "bump-my-version>=1.0",
]
calibration = [
    "pyemu>=1.4.0",
    "HydroErr>=2.0.0",
]
doc = [
    "mkdocs >=1.6.0",
    "mkdocs-material >=9.6.0",
    "mkdocstrings[python] >=0.30.0",
    "mkdocs-autorefs >=1.4.0",
    "mdx-include >=1.4.1",
    "mkdocs-markdownextradata-plugin >=0.2.5",
    "mike >=2.0.0",
]

[project.urls]
Repository = "https://github.com/mobidichydro/mobidicpy"
Issues = "https://github.com/mobidichydro/mobidicpy/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mobidic*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
"mobidic.data" = ["*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]

[tool.coverage.run]
branch = true
source = ["mobidic"]
command_line = "-m pytest"
omit = ["examples/*"]

[tool.ruff]
line-length = 120
output-format = "concise"
extend-exclude = ["docs", "*.ipynb"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = [
    "ANN204", # Missing return type annotation for special (dunder) method
    "FBT",    # Using boolean function arguments
    "TD",     # TODOs
    "FIX001", # Resolve FIXMEs
    "FIX002", # Resolve TODOs
    "B028",   # No explicit `stacklevel` keyword argument found in warning
    # No docstrings required in the following cases
    "D100", # Missing module docstring
    "D104", # Missing public package docstring
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "PT011",  # Missing `match` parameter in `pytest.raises()`
    "S101",   # Use of assert is detected
]

[tool.ruff.lint.isort]
known-first-party = ["mobidic"]
force-single-line = true
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

[tool.bumpversion]
current_version = "0.1.1"

[[tool.bumpversion.files]]
filename = "mobidic/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
